--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -8,11 +8,13 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sidebar.css"> 
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   </head>
   <body>
-    <!-- début test -->
-		
+
+		<!-- début Sidebar -->
 		<div class="wrapper d-flex align-items-stretch">
 			<nav id="sidebar" class="active">
           <h1><a href="index.html" class="logo" ><img src="../sidebar/images/philiance_favicon.png"/></a></h1>
@@ -34,20 +36,22 @@
             <i class="fa fa-arrows-h"></i>
             <span class="sr-only"></span>
           </button>
-        
-          <!-- <div class="footer"></div> -->
-      </nav>
+        </nav>
+    </div>
+
+    <!-- Page Content  -->    
     
-      <!-- fin de test -->
-        <!-- Page Content  -->
-      <div>
-        <h2>Gestion de Stock Philiance</h2> 
-      </div>
-		</div>
+    <div class="footer" style="text-align: center">
+      &copy; Copyright - 2020 - Philiance
+    </div>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js"></script> 
+    <!-- JS, Popper.js, and jQuery -->
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> -->
   </body>
 </html>
